--- a/proyectogrupo3/package.json
+++ b/proyectogrupo3/package.json
@@ -14,8 +14,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.5",
+    "cors": "^2.8.5",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
