--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,11 @@ server.port=8080
 
 spring.application.name=grupo3
 # Configuración de H2
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+spring.datasource.url=jdbc:h2:file:./data/testdb
 
 # Configuración de inicialización
 spring.sql.init.schema-locations=classpath:schema.sql
