--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.datasource.url=jdbc:h2:file:./data/testdb
+#spring.datasource.url=jdbc:h2:file:./data/testdb;DB_CLOSE_ON_EXIT=FALSE
 
 # Configuración de inicialización
 spring.sql.init.schema-locations=classpath:schema.sql
@@ -14,13 +15,17 @@ spring.sql.init.data-locations=classpath:data.sql
 spring.datasource.initialization-mode=always
 spring.sql.init.mode=always
 
-
 # Mostrar la consola H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# JDBC URL: jdbc:h2:mem:testdb
+# JDBC URL: jdbc:h2:file:./data/testdb
 # User Name: sa
 # Password: password
 
 
+# Permitir CORS para todas las rutas
+spring.web.cors.allow-credentials=true
+spring.web.cors.allowed-origins=http://localhost:5173
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
